add experience and programm sections

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -11,14 +11,14 @@
 @import "global/button";
 
 @import "sections/header";
-@import "sections/nav";
+//@import "sections/nav";
 @import "sections/hero";
-@import "sections/about";
+@import "sections/experience";
 @import "sections/get";
 @import "sections/price";
 @import "sections/how";
 @import "sections/program";
-@import "sections/coach";
-@import "sections/faq";
+//@import "sections/coach";
+//@import "sections/faq";
 @import "sections/footer";
 @import "sections/title";
