--- a/source/styles/sections/title.scss
+++ b/source/styles/sections/title.scss
@@ -16,6 +16,7 @@
   &__text {
     font-size: 1.25rem;
     font-family: $ff-main-light;
+    margin-top: 40px;
 
     @media (max-width: 980px) {
       padding: 15px 30px;
