--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -9,11 +9,11 @@ html(lang="ru")
 
         body
             include sections/header
-            include sections/about
+            include sections/experience
             include sections/get
             include sections/price
             include sections/how
-            //include sections/program
+            include sections/program
             //include sections/info
             //include sections/coach
             //include sections/guarantees
