--- a/source/templates/sections/experience.pug
+++ b/source/templates/sections/experience.pug
@@ -1,7 +1,7 @@
-section#about.about
+section#experience.experience
     .container
-        .title.title--with-bottom-line
-            h2.title__header О курсе
+        .title
+            h2.title__header.title--with-bottom-line О курсе
             .title__text 8-дневный онлайн-курс обучения медитации под руководством эксперта по медитациям
                 br
                 | Техники медитации, которые сможет освоить даже новичок
@@ -11,26 +11,26 @@ section#about.about
                 | Без религии, философии и эзотерики
                 br
                 | Уникальная программа обучения медитации, аналогов которой нет
-        ul.about__list
-            li.about__item
+        ul.experience__list
+            li.experience__item
                 .icon.icon-study
-                h3.about__header Опыт
-                p.about__description.
+                h3.experience__header Опыт
+                p.experience__description.
                     За 8 дней вы научитесь с помощью понятных техник медитации сбрасывать напряжение, восстанавливаться
                     и эффективно отдыхать, перезагружаться, работать с эмоциями, находить контакт с собой,
                     фокусироваться на важном.
 
-            li.about__item
+            li.experience__item
                 .icon.icon-book
-                h3.about__header.about__header-book Знания
-                p.about__description.
+                h3.experience__header.experience__header-book Знания
+                p.experience__description.
                     Идеальная пропорция теоретических знаний о медитации, о специфике применения, о влиянии на
                     физическое, эмоциональное здоровье и практический опыт использования техник медитации в
                     повседневной жизни.
 
-            li.about__item
+            li.experience__item
                 .icon.icon-planet
-                h3.about__header.about__header-message Возможности
-                p.about__description.
+                h3.experience__header.experience__header-message Возможности
+                p.experience__description.
                     Вы получите целый набор работающих техник медитации, которые можно комбинировать и применять
                     самостоятельно, исходя из вашего ритма жизни и задач, которые необходимо решать каждый день.
