--- a/source/templates/sections/program.pug
+++ b/source/templates/sections/program.pug
@@ -1,50 +1,90 @@
-section#program.approach
+section#program.program
     .container
         .title.title--with-bottom-line
             h2.title__header Программа обучение
-            .title__text Check Our approches step by step (how we do it)
 
-        ul.approach__list
-            li.approach__item
-                .approach__image
-                    img.approach__picture(src="../images/step-1.jpg" alt="step-1")
-                    .approch__step step
-                .approach__text
-                    .approach__title Step 1: Heading Here
-                    p.approach__description.
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                        tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                        nostrud exerci
+        .accordion
+            dt
+                a День 1
+                    dd.accordion__text - Дыхание - это жизнь,
+                        br
+                        | - Особенности дыхания во время стресса,
+                        br
+                        | - Глубокие дыхание и его преимущества,
+                        br
+                        | - Медитации на дыхании
 
-            li.approach__item
-                .approach__image
-                    img.approach__picture(src="../images/step-2.jpg" alt="step-2")
-                    .approach__step step
-                .approach__text
-                    .approach__title Step 2: Heading Here
-                    p.approach__description.
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                        tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                        nostrud exerci
+            dt
+                a День 2
+                    dd.accordion__text - Напряжение и тело,
+                        br
+                        | - Эмоции и следы от них в теле,
+                        br
+                        | - Тело и забота о нем,
+                        br
+                        | - Медитация на расслабление тела
 
-            li.approach__item
-                .approach__image
-                    img.approach__picture(src="../images/step-3.jpg" alt="step-3")
-                    .approach__step step
-                .approach__text
-                    .approach__title Step 3: Heading Here
-                    p.approach__description.
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                        tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                        nostrud exerci
+            dt
+                a День 3
+                    dd.accordion__text - Эмоции и их природа,
+                        br
+                        | - Как правильно выражать эмоции,
+                        br
+                        | - Как проживать эмоции экологично,
+                        br
+                        | - Медитация на проработку эмоций
 
-            li.approach__item
-                .approach__image
-                    img.approach__picture(src="../images/step-4.jpg" alt="step-4")
-                    .approach__step step
-                .approach__text
-                    .approach__title Step 4: Heading Here
-                    p.approach__description.
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                        tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                        nostrud exerci
+            dt
+                a День 4
+                    dd.accordion__text - Осознавать себя как это,
+                        br
+                        | - Ключевые вопросы на каждый день,
+                        br
+                        | - Как понимать себя и свои желания,
+                        br
+                        | - Медитация, чтобы найти контакт с собой
+
+
+            dt
+                a День 5
+                    dd.accordion__text - Ежедневный стресс и усталость,
+                        br
+                        | - Ментальное напряжение,
+                        br
+                        | - Как расставлять приоритеты, когда все важно,
+                        br
+                        | - Медитация тренировка внимания
+
+            dt
+                a День 6
+                    dd.accordion__text - Быть в моменте - как создать эту привычку,
+                        br
+                        | - Фокус и как тренировать этот навык,
+                        br
+                        | - Как переключаться между задачами и оставаться эффективным,
+                        br
+                        | - Медитация концентрация
+
+            dt
+                a День 7
+                    dd.accordion__text - Избавляться от лишнего,
+                        br
+                        | - Эмоциональный и ментальный хлам,
+                        br
+                        | - Принятие и Благодарность,
+                        br
+                        | - Медитация по технике ПБО
+
+            dt
+                a День 8
+                    dd.accordion__text - Вдохновение на каждый день,
+                        br
+                        | - Благодарность и как ее принимать,
+                        br
+                        | - Ежедневная работа с внутренним ресурсом,
+                        br
+                        | - Медитация принятия и благодарности*/
+
+
+
+        a.button.button--blue.button--text-uppercase(href="#contact") Записаться
