--- a/source/styles/sections/experience.scss
+++ b/source/styles/sections/experience.scss
@@ -1,4 +1,4 @@
-.about {
+.experience {
   padding: 99px 0 105px 0;
   text-align: center;
 
@@ -40,14 +40,6 @@
     font-size: 1.375rem;
     font-family: $ff-main-bold;
     color: #424242;
-
-    &-message {
-      margin-right: 7px;
-    }
-
-    &-book {
-      margin-right: 3px;
-    }
   }
 
   &__description {
