--- a/source/styles/sections/program.scss
+++ b/source/styles/sections/program.scss
@@ -1,134 +1,53 @@
-.approach {
-  padding: 86px 0 94px;
-  background-color: #f3f3f3;
+.program {
+  padding: 50px;
+  text-align: center;
 
-  @media (max-width: 985px) {
-    padding-top: 40px;
-    padding-bottom: 20px;
-  }
+  .accordion {
+    margin-bottom: 30px;
 
-  &__list {
-    margin: 0;
-    padding: 0;
-    counter-reset: count;
-
-    @media (max-width: 985px) {
-      margin: 0 30px;
+    .title__header {
+      margin-top: 50px;
     }
 
-    @media (min-width: 1024px) and (max-width: 1366px) {
-      padding: 0 20px;
-    }
-  }
-
-  &__item {
-    margin-bottom: 40px;
-    border-radius: 5px;
-    box-shadow: -1px -1px 10px 1px rgba(214, 214, 214, 1);
-    color: #424242;
-    background: #fff;
-
-    @media (max-width: 985px) {
-      padding: 15px 15px;
+    a {
+      text-decoration: none;
+      cursor: pointer;
+      text-align: left;
     }
 
-    &:nth-child(2n) {
-      display: flex;
-      flex-direction: row-reverse;
-      text-align: right;
+    &__header {
+      margin: 20px 0 9px 0;
+      font-size: 1.375rem;
+      font-family: $ff-main-bold;
+    }
 
-      @media (max-width: 732px) {
+    dt {
+      padding: 10px;
+      background: #5a8a8a;
+      border-radius: 5px;
+      margin-bottom: 10px;
+      a {
         display: block;
-      }
-
-      .approach__step {
-        right: auto;
-        left: -55px;
+        color: #fdeacf;
+        font-weight: bold;
       }
     }
-  }
-
-  &__image {
-    position: relative;
-    max-width: 340px;
-    max-height: 236px;
-    display: inline-block;
-    vertical-align: top;
-
-    @media (max-width: 985px) {
-      max-width: 227px;
-      max-height: 157px;
+    dd {
+      padding: 10px;
+      a {
+        display: block;
+        color: #000;
+        font-weight: bold;
+      }
     }
-
-    @media (max-width: 732px) {
-      margin: auto;
-      display: block;
+    div {
+      border-top: 0;
+      font-size: 12px;
+      &:last-of-type {
+        border-top: 1px solid white;
+        position: relative;
+        top: -1px;
+      }
     }
-  }
-
-  &__picture {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-
-  &__text {
-    display: inline-block;
-    vertical-align: top;
-    width: 64%;
-    padding: 70px 70px 55px 90px;
-    font-size: 0.875rem;
-
-    @media (max-width: 985px) {
-      padding: 25px 20px;
-    }
-
-    @media (max-width: 732px) {
-      width: 100%;
-      text-align: center;
-    }
-  }
-
-  &__step {
-    @include centerer-y();
-
-    right: -52px;
-    top: 48%;
-    width: 103px;
-    height: 103px;
-    padding-top: 10px;
-    border-radius: 5px;
-    border: 2px solid #fff;
-    text-align: center;
-    font-size: 1.24rem;
-    background-color: #de2b24;
-    color: #fff;
-
-    &:before {
-      content: counter(count);
-      counter-increment: count;
-      display: block;
-      font-family: $ff-steps;
-      font-size: 3.5rem;
-      line-height: 1;
-      color: #fff;
-    }
-
-    @media (max-width: 985px) {
-      display: none;
-    }
-  }
-
-  &__title {
-    margin-bottom: 6px;
-    padding-right: 37px;
-    font-size: 1.125rem;
-    font-family: $ff-main-bold;
-  }
-
-  &__description {
-    margin: 0;
-    line-height: 1.5;
-    padding-right: 23px;
   }
 }
