add info and coach sections

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -18,7 +18,8 @@
 @import "sections/price";
 @import "sections/how";
 @import "sections/program";
-//@import "sections/coach";
+@import "sections/info";
+@import "sections/coach";
 //@import "sections/faq";
 @import "sections/footer";
 @import "sections/title";
