--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -14,8 +14,8 @@ html(lang="ru")
             include sections/price
             include sections/how
             include sections/program
-            //include sections/info
-            //include sections/coach
+            include sections/info
+            include sections/coach
             //include sections/guarantees
             //include sections/testimonials
             include sections/price
