--- a/source/templates/sections/coach.pug
+++ b/source/templates/sections/coach.pug
@@ -1,34 +1,22 @@
-section.work#coach
+section#coach.coach
     .container
-        .title.title--with-bottom-line
-            h2.title__header О тренере
-            .title__text We are added featured works below
 
-        ul.work__list
-            li.work__item.work__item--name
-                .work__name Project Name
-                .work__description Facebook marketing
+        .coach__list
+            .title
+                h2.title__header.title--with-bottom-line Кто ведёт программу?
+            .coach__item
+                h6.coach__header.
+                    Привет! Я Алена Вишневская, эксперт по медитациям, автор онлайн-программ обучения
+                    медитации, приложения My Meditation, инструктор контролируемых медитаций и руководитель Школы Медитации💙
 
-            li.work__item: img.work__picture(src="../images/work-1.jpg" alt="work-1")
-
-
-            li.work__item.work__item--name
-                .work__name Project Name
-                .work__description Landing page
-
-            li.work__item: img.work__picture(src="../images/work-2.jpg" alt="work-2")
-
-
-            li.work__item: img.work__picture(src="../images/work-3.jpg" alt="work-3")
-
-            li.work__item.work__item--name
-                .work__name Project Name
-                .work__description Landing page
-
-
-            li.work__item: img.work__picture(src="../images/work-4.jpg" alt="work-4")
-
-            li.work__item.work__item--name
-                .work__name Project Name
-                .work__description Facebook marketing
-
+                .coach__description
+                    br
+                    | - вы получаете доступ в закрытую FB-группу
+                    br
+                    | - часть материалов вы получите в PDF-формате
+                    br
+                    | - задания и теоретическая информация публикуются в группе
+                    br
+                    | - онлайн-трансляции Алены Вишневской, групповые медитации проводятся в закрытой группе
+                    br
+                    | - в результате обучения вы получите набор техник медитации на каждый день и ответы на все свои вопросы, связанные с медитацией
