--- a/source/templates/sections/info.pug
+++ b/source/templates/sections/info.pug
@@ -1,26 +1,30 @@
-section#info.about
+section#info.info
     .container
         .title.title--with-bottom-line
-            h2.title__header Информация
-            .title__text We are added out major Services
-        ul.about__list
-            li.about__item
-                .icon.icon-like
-                h3.about__header Facebook Marketing
-                p.about__description.
-                    Lorem ipsum is simply dummy text of the printing and typesetting industry.
-                    Standart dummy text ever
+            h2.title__header Важная информация
+        ul.info__list
+            li.info__item
+                h3.info__header Обучение проходит в онлайн-режиме
 
-            li.about__item
-                .icon.icon-book
-                h3.about__header.about__header-book landing pages Creation
-                p.about__description.
-                    Lorem ipsum is simply dummy text of the printing and typesetting industry.
-                    Standart dummy text ever
+                .info__description
+                    br
+                    | - вы получаете доступ в закрытую FB-группу
+                    br
+                    | - часть материалов вы получите в PDF-формате
+                    br
+                    | - задания и теоретическая информация публикуются в группе
+                    br
+                    | - онлайн-трансляции Алены Вишневской, групповые медитации проводятся в закрытой группе
+                    br
+                    | - в результате обучения вы получите набор техник медитации на каждый день и ответы на все свои вопросы, связанные с медитацией
 
-            li.about__item
-                .icon.icon-message
-                h3.about__header.about__header-message Ads management
-                p.about__description.
-                    Lorem ipsum is simply dummy text of the printing and typesetting industry.
-                    Standart dummy text ever
+            li.info__item.info__item_time
+                h3.info__header Время
+
+                .info__description
+                    br
+                    | - С 25 июня по 2 июля 2018
+                    br
+                    | - задания и теория будут публиковаться в 6.00
+                    br
+                    | - онлайн-трансляции с Аленой Вишневской в 20.00
