--- a/source/styles/sections/info.scss
+++ b/source/styles/sections/info.scss
@@ -1,6 +1,23 @@
-.price {
+.info {
+  position: relative;
   padding: 99px 0 105px 0;
   text-align: center;
+
+  &:before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: linear-gradient(90deg,
+            rgba(202, 216, 197, 0.6),
+            rgba(90, 138, 138, 0.6)
+    ), url(../images/bg_info.jpg) left/cover no-repeat;
+  }
 
   @media (max-width: 985px) {
     padding: 40px 0 20px 0;
@@ -20,14 +37,13 @@
   }
 
   &__item {
-    width: 30%;
+    width: 45%;
     padding: 26px;
-
-    &:hover {
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
-      border-radius: 10px;
-      cursor: pointer;
-    }
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    border-radius: 10px;
+    cursor: pointer;
+    background: #fff;
+    color: #5c5c5c;
 
     @media (max-width: 980px) {
       width: 80%;
@@ -39,20 +55,20 @@
       width: 100%;
       margin: 0 5px 40px;
     }
+
+    &_time {
+      background: #5a8a8a;
+      color: #fff;
+    }
   }
   
   &__header {
     margin: 0 0 9px 0;
     font-size: 1.375rem;
     font-family: $ff-main-bold;
-    color: #424242;
 
-    &-message {
-      margin-right: 7px;
-    }
-
-    &-book {
-      margin-right: 3px;
+    @media (max-width: 400px) {
+      padding: 0 20px;
     }
   }
 
@@ -60,7 +76,6 @@
     margin-top: 0;
     font-size: 0.875rem;
     line-height: 1.5;
-    color: #5c5c5c;
     text-align: left;
     padding-bottom: 30px;
 
@@ -68,21 +83,4 @@
       padding: 0 20px 30px;
     }
   }
-}
-
-.button--text-uppercase {
-  padding: 10px 15px;
-  border-radius: 8px;
-  font-weight: bold;
-  letter-spacing: 1px;
-  font-size: 1rem;
-  font-family: $ff-main-bold;
-}
-
-.total--best {
-  margin-top: 40px;
-}
-
-.total--premium {
-  margin-top: 18px;
 }
