add coach and guarantees section

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -20,6 +20,7 @@
 @import "sections/program";
 @import "sections/info";
 @import "sections/coach";
+@import "sections/guarantees";
 //@import "sections/faq";
 @import "sections/footer";
 @import "sections/title";
