--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -16,7 +16,7 @@ html(lang="ru")
             include sections/program
             include sections/info
             include sections/coach
-            //include sections/guarantees
+            include sections/guarantees
             //include sections/testimonials
             include sections/price
             //include sections/faq
