--- a/source/styles/sections/guarantees.scss
+++ b/source/styles/sections/guarantees.scss
@@ -1,7 +1,24 @@
-.coach {
+.guarantees {
+  position: relative;
   padding: 99px 0 105px 0;
-  text-align: center;
-  background: #cad8c5;
+  text-align: left;
+  color: #000;
+
+  &:before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: linear-gradient(90deg,
+            rgba(202, 216, 197, 0.6),
+            rgba(90, 138, 138, 0.6)
+    ), url(../images/bg_guarantees.jpg) bottom/cover no-repeat;
+  }
 
   @media (max-width: 980px) {
     padding: 30px 0;
@@ -26,7 +43,6 @@
 
   &__item {
     padding: 26px;
-    color: #5c5c5c;
 
     &_time {
       background: #5a8a8a;
