--- a/source/templates/sections/coach.pug
+++ b/source/templates/sections/coach.pug
@@ -11,12 +11,17 @@ section#coach.coach
 
                 .coach__description
                     br
-                    | - вы получаете доступ в закрытую FB-группу
+                    | Личный опыт практики медитации - 5 лет
                     br
-                    | - часть материалов вы получите в PDF-формате
+                    | Опыт обучения и работы с людьми - 3 года
                     br
-                    | - задания и теоретическая информация публикуются в группе
-                    br
-                    | - онлайн-трансляции Алены Вишневской, групповые медитации проводятся в закрытой группе
-                    br
-                    | - в результате обучения вы получите набор техник медитации на каждый день и ответы на все свои вопросы, связанные с медитацией
+                .coach__description.
+                    Каждый день я отвечаю на множество вопросов о том, как научиться медитировать, с чего начать, какие
+                    техники пробовать, как понять, что все делается правильно - и очень радуюсь возрастающему интересу к
+                    медитации. 💡Так у меня родилась идея провести онлайн-программу M-Time для тех, кто хочет научиться
+                    медитировать, но все никак не попробует. В общем, считайте, что это знак!
+                .coach__description.
+                    25 июля я проведу первое занятие для участников программы - мы будем говорить о медитации, практиковать,
+                    обсуждать и анализировать опыт. На протяжении восьми дней я буду давать задания, поддерживать и помогу
+                    разобраться с медитацией, чтобы вы убедились сами, что медитировать просто, и что это сегодня необходимо
+                    каждому человеку.
