--- a/source/templates/sections/guarantees.pug
+++ b/source/templates/sections/guarantees.pug
@@ -1,26 +1,16 @@
-section#guarantees.about
+section#guarantees.guarantees
     .container
-        .title.title--with-bottom-line
-            h2.title__header Гарантии
-            .title__text We are added out major Services
-        ul.about__list
-            li.about__item
-                .icon.icon-like
-                h3.about__header Facebook Marketing
-                p.about__description.
-                    Lorem ipsum is simply dummy text of the printing and typesetting industry.
-                    Standart dummy text ever
 
-            li.about__item
-                .icon.icon-book
-                h3.about__header.about__header-book landing pages Creation
-                p.about__description.
-                    Lorem ipsum is simply dummy text of the printing and typesetting industry.
-                    Standart dummy text ever
+        .guarantees__list
+            .title
+                h2.title__header.title--with-bottom-line Гарантии
+            .guarantees__item
+                h6.guarantees__header.
+                    Гарантируем возврат 100% внесенных денег.
+                    Если вас по какой-либо причине не устроят теория\материалы\практика - вы получите все внесенные деньги назад.
 
-            li.about__item
-                .icon.icon-message
-                h3.about__header.about__header-message Ads management
-                p.about__description.
-                    Lorem ipsum is simply dummy text of the printing and typesetting industry.
-                    Standart dummy text ever
+                .guarantees__description.
+                    Этим правом можно воспользоваться только в течении 2-х дней программы. В то же время, воспользовавшись
+                    им, вы теряете возможность получения каких-либо бонусов и дополнительных материалов, а так же
+                    возможность вашего участия в любых других наших программах будет рассматриваться дополнительно
+                    командой “M-time. Школы Медитации”.
