start add testimonials section

--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -17,7 +17,7 @@ html(lang="ru")
             include sections/info
             include sections/coach
             include sections/guarantees
-            //include sections/testimonials
+            include sections/testimonials
             include sections/price
             //include sections/faq
             include sections/footer
