--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -21,6 +21,7 @@
 @import "sections/info";
 @import "sections/coach";
 @import "sections/guarantees";
+@import "sections/testimonials";
 //@import "sections/faq";
 @import "sections/footer";
 @import "sections/title";
