--- a/source/templates/sections/testimonials.pug
+++ b/source/templates/sections/testimonials.pug
@@ -1,34 +1,34 @@
-section.work#testimonials
+section.testim#testim
     .container
         .title.title--with-bottom-line
             h2.title__header Отзывы
-            .title__text We are added featured works below
 
-        ul.work__list
-            li.work__item.work__item--name
-                .work__name Project Name
-                .work__description Facebook marketing
+        span#right-arrow.arrow.right.fa.fa-chevron-right
+        span#left-arrow.arrow.left.fa.fa-chevron-left
+        ul#testim-dots.dots
+            li.dot.active
+            li.dot
+            li.dot
+            li.dot
+            li.dot
 
-            li.work__item: img.work__picture(src="../images/work-1.jpg" alt="work-1")
+            #testim-content.cont
+
+                .active
+                    img.img(src="images/testim_1.jpg" alt="")
+                    h2 Lorem P. Ipsum
+                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+
+                div
+                    img.img(src="images/testim_1.jpg" alt="")
+                    h2 Lorem P. Ipsum
+                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+
+                div
+                    img.img(src="images/testim_1.jpg" alt="")
+                    h2 Lorem P. Ipsum
+                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
 
 
-            li.work__item.work__item--name
-                .work__name Project Name
-                .work__description Landing page
 
-            li.work__item: img.work__picture(src="../images/work-2.jpg" alt="work-2")
-
-
-            li.work__item: img.work__picture(src="../images/work-3.jpg" alt="work-3")
-
-            li.work__item.work__item--name
-                .work__name Project Name
-                .work__description Landing page
-
-
-            li.work__item: img.work__picture(src="../images/work-4.jpg" alt="work-4")
-
-            li.work__item.work__item--name
-                .work__name Project Name
-                .work__description Facebook marketing
 
