--- a/source/styles/sections/get.scss
+++ b/source/styles/sections/get.scss
@@ -2,6 +2,7 @@
   padding: 99px 0 105px 0;
   text-align: center;
   background: #fdeacf;
+  color: #424242;
 
   @media (max-width: 985px) {
     padding: 40px 0 20px 0;
