--- a/source/styles/sections/coach.scss
+++ b/source/styles/sections/coach.scss
@@ -2,6 +2,7 @@
   padding: 99px 0 105px 0;
   text-align: center;
   background: #cad8c5;
+  color: #424242;
 
   @media (max-width: 980px) {
     padding: 30px 0;
