--- a/source/styles/sections/price.scss
+++ b/source/styles/sections/price.scss
@@ -1,6 +1,7 @@
 .price {
   padding: 99px 0 105px 0;
   text-align: center;
+  color: #424242;
 
   @media (max-width: 985px) {
     padding: 40px 0 20px 0;
