--- a/source/templates/sections/testimonials.pug
+++ b/source/templates/sections/testimonials.pug
@@ -1,34 +1,67 @@
-section.testim#testim
+section.testimonials#testimonials
     .container
-        .title.title--with-bottom-line
-            h2.title__header Отзывы
+        .title
+            h2.title__header.title--with-bottom-line-testim Отзывы о курсе
+        .slider
+            .slider-wrapper.flex
+                .slide.flex
+                    .slide-image.slider-link.prev
+                        img(src='images/alinka.jpg' alt="Alina")
+                        .overlay
+                    .slide-content
+                        .slide-date 30.07.2017.
+                        .slide-title Алинка Назарова
+                        .slide-text.
+                            Якщо буремність буття компастує ваші мізки. А *говорилку* виключає лише созвучний напій))
+                            і всі не ОК, і я не ОК...гори-гори ясно, щоб не дай бог не погасло все те щастя і успіх...))
+                            козел на дорозі, наркомани на городі і таке інше))). Рекомендую відколупати шпаринку, для
+                            свіжого повітря в своїй ракушці instagramo успішного життя-буття. У кого немає активних точок
+                            болю, козлів на дорозі і наркомани хай собі проживають свій досвід)), курс буде не меньш
+                            корисним! Люблю їх і респектую! Бо можна нести в маси всяке різне, але тільки відкритість
+                            серця дающого є ключовим фактором для спільного упіху всіх учасників процесії.
+                            П.С. краткое изложение: круті сердечно відкриті люди дають до біса цікаву і корисну інфу.
 
-        span#right-arrow.arrow.right.fa.fa-chevron-right
-        span#left-arrow.arrow.left.fa.fa-chevron-left
-        ul#testim-dots.dots
-            li.dot.active
-            li.dot
-            li.dot
-            li.dot
-            li.dot
+                .slide.flex
+                    .slide-image.slider-link.next
+                        img(src='images/alla.jpg' alt="Alla")
+                        .overlay
+                    .slide-content
+                        .slide-date 30.08.2017.
+                        .slide-title Алла Николаевна
+                        .slide-text.
+                            Мне как новичку была очень полезна информация о медитации, о их видах и техниках. Все очень
+                            доступным языком сказано и описано. Спасибо огромнейшее за такой подарок. Подарок, потому
+                            что цена была очень доступной для такого объема информации. Еще раз, спасибо!
 
-            #testim-content.cont
+                .slide.flex
+                    .slide-image.slider-link.next
+                        img(src='images/elena.jpg' alt="Elena")
+                        .overlay
+                    .slide-content
+                        .slide-date 30.09.2017.
+                        .slide-title Елена Ветер (Иващенко)
+                        .slide-text.
+                            В медитировании я новичок, но благодаря онлайн-программе узнала о новых для себя практиках.
+                            За обучение огромное спасибо!
 
-                .active
-                    img.img(src="images/testim_1.jpg" alt="")
-                    h2 Lorem P. Ipsum
-                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
-
-                div
-                    img.img(src="images/testim_1.jpg" alt="")
-                    h2 Lorem P. Ipsum
-                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
-
-                div
-                    img.img(src="images/testim_1.jpg" alt="")
-                    h2 Lorem P. Ipsum
-                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
-
+                .slide.flex
+                    .slide-image.slider-link.next
+                        img(src='images/maryna.jpg' alt="Maryna")
+                        .overlay
+                    .slide-content
+                        .slide-date 30.10.2017.
+                        .slide-title Марина Явтушенко-Губська
+                        .slide-text.
+                            Раньше я думала, что медитировать очень сложно. Что нужно выделить для этого специально много
+                            времени, какое то особенное место и т.п. Но вот есть в Фейсбуке такая девочка Алена Вишневская,
+                             которая показала мне совсем другую сторону и возможности медитации. Главное желание. И
+                             оказываеться все легче и проще. И можно найти время, обустроить место и даже 10 минут
+                             успокоят твой ум и будет возможность выдохнуть. Ушла медитировать! Спасибо огромное за опыт.
 
 
+            .arrows
+                a.arrow.slider-link.prev(href='#', title='Previous')
+                    i.fa.fa-chevron-left
+                a.arrow.slider-link.next(href='#', title='Next')
+                    i.fa.fa-chevron-right
 
