add testimonials sections

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -21,7 +21,8 @@
 @import "sections/info";
 @import "sections/coach";
 @import "sections/guarantees";
-@import "sections/testimonials";
+//@import "sections/testimonials";
+@import "sections/testim";
 //@import "sections/faq";
 @import "sections/footer";
 @import "sections/title";
