add faq section and change testimonials section and add mobile view testimonials section

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -21,8 +21,7 @@
 @import "sections/info";
 @import "sections/coach";
 @import "sections/guarantees";
-//@import "sections/testimonials";
 @import "sections/testim";
-//@import "sections/faq";
+@import "sections/faq";
 @import "sections/footer";
 @import "sections/title";
