--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -17,12 +17,10 @@ html(lang="ru")
             include sections/info
             include sections/coach
             include sections/guarantees
-            //include sections/testimonials
             include sections/testim
             include sections/price
-            //include sections/faq
+            include sections/faq
             include sections/footer
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js")
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js")
         script(src="js/main.min.js")
