--- a/source/styles/sections/faq.scss
+++ b/source/styles/sections/faq.scss
@@ -1,5 +1,5 @@
-.form__section {
-  padding: 100px 0 110px 0;
+.faq__section {
+  padding: 70px 0 70px 0;
   color: #fff;
   background-color: #1287bf;
 
@@ -20,107 +20,121 @@
   }
 
   .title__text {
-    font-size: 1.25rem
+    font-size: 1.25rem;
+  }
+}
+
+$backgroundColor: #f77462;
+$list: #6dc5dd;
+$border: #5ab2ca;
+$geneicons: #fff;
+
+.accordion_faq {
+  width: 100%;
+  min-width: 950px;
+  display: block;
+  list-style-type: none;
+  overflow: hidden;
+  height: 100%;
+  font-size: 0;
+  text-align: center;
+  padding: 30px 0;
+}
+
+.tabs {
+  display: inline-block;
+  background-color: $list;
+  border-right: $border 1px solid;
+  width: 80px;
+  height: 200px;
+  overflow: hidden;
+  position: relative;
+  margin: 0;
+  font-size: 16px;
+  transition: (all 0.4s 0.1s ease-in-out);
+  text-align: left;
+
+  &:hover {
+    width: 600px;
+
+    .social-links {
+      p {
+        &:before {
+          margin-left: -100px;
+        }
+
+        &:after {
+          margin-left: -10px;
+        }
+      }
+    }
   }
 
-  .btn-down {
+  .paragraph {
     position: relative;
-    margin: auto auto 20px;
-    width: 65px;
-    height: 65px;
-    border: 2px solid #fff;
-    border-radius: 50%;
-  }
+    width: 520px;
+    margin-left: 80px;
+    padding: 10px 0 0 10px;
+    height: 200px;
+    background: #fff;
+    color: #000;
 
-  .arrow-down {
-    @include centerer-xy();
+    h1 {
+      font-family: $ff-main-bold;
+      font-size: 1rem;
+      margin-bottom: 10px;
+    }
 
-    padding: 20px;
-    color: #fff;
-
-    .fa {
-      font-size: 2.5rem;
+    p {
+      font-family: $ff-main-light;
+      font-size: 0.88rem;
+      line-height: 1;
+      padding-right: 30px;
     }
   }
 }
 
-.form {
-  position: relative;
-  width: 67%;
-  margin: auto;
-  padding: 40px 50px 66px 50px;
-  border-radius: 3px;
-  color: #828282;
-  text-align: center;
-  background-color: #fff;
+.social-links {
+  display: block;
 
-  @media (min-width: 320px) and (max-width: 810px) {
-    width: 90%;
-    padding: 25px;
-  }
-
-  &-container {
-    padding-top: 30px;
-  }
-
-  &:before {
-    @include centerer-x();
-
-    content: '';
-    border: 30px solid transparent;
-    border-bottom: 30px solid #fff;
-    top: -59px;
-  }
-
-  &__close-button {
-    position: absolute;
-    top: -28px;
-    right: -16px;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    border: 2px solid #fff;
-    text-align: center;
-    font-size: 2rem;
-    color: #fff;
-    background: #de2b24;
-    transition: 0.3s;
-
-    &:hover {
-      background: lighten(#de2b24, 10%);
-    }
-  }
-
-  &__text {
-    margin-bottom: 33px;
-    font-size: 0.9375rem;
-    line-height: 1.5;
-  }
-
-  &__fields {
-    margin-bottom: 32px;
-  }
-
-  &__input {
-    width: 76%;
+  p {
     display: block;
-    margin: auto auto 8px auto;
-    padding: 18px 20px;
-    border: 1px solid #d8d8d8;
-    border-radius: 3px;
-    font-size: 0.875rem;
+    text-indent: -9999px;
+    font-size: 0;
+    line-height: 0;
 
-    @media (min-width: 320px) and (max-width: 810px) {
-      width: 100%;
+    &:before, &:after {
+      transition: ( all 0.4s 0.1s ease-in-out );
+      width: 80px;
+      height: 200px;
+      position: absolute;
+      text-indent: 0;
+      padding-top: 90px;
+      padding-left: 25px;
+      display: block;
+      font: bold 30px Genericons;
+      color: $geneicons;
     }
-    
-    &:focus {
-      box-shadow: 0 0 8px 1px rgba(0, 0, 0, 0.5);
+
+    &:after {
+      font-size: 48px;
+      padding-left: 20px;
+      padding-top: 80px;
+      margin-left: 85px;
     }
   }
+}
 
-  .button {
-    padding: 15px 30px;
-    border: none;
+.icon__fa {
+  p {
+    &:after {
+      content: '-';
+      text-align: center;
+    }
+
+    &:before {
+      content: '+';
+      margin-left: 5px;
+    }
   }
 }
