--- a/source/styles/sections/testim.scss
+++ b/source/styles/sections/testim.scss
@@ -1,15 +1,43 @@
 .testimonials {
-  //height: 620px;
   padding: 99px 0 50px;
   text-align: center;
   color: #cecece;
   background: #424242;
 
   .name__testim {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px 0;
     text-align: left;
   }
 
+  .all_slider {
+    position: relative;
+    height: 450px;
+
+    @media (max-width: 600px) {
+      height: 500px;
+    }
+
+    @media (max-width: 500px) {
+      height: 550px;
+    }
+
+    @media (max-width: 420px) {
+      height: 650px;
+    }
+
+    @media (min-width: 351px) and (max-width: 419px) {
+      height: 680px;
+    }
+
+    @media (min-width: 320px) and (max-width: 350px) {
+      height: 760px;
+    }
+  }
+
   input[type="radio"] {
+    display: none;
     width: 1px;
     /* Setting this to 0 make it invisible for VoiceOver */
     height: 1px;
@@ -33,8 +61,8 @@
   blockquote {
     margin: 0;
     padding: 30px;
-    background-color: #DB532B;
-    color: white;
+    background-color: #974d26;
+    color: #fdeacf;
     box-shadow: 0 5px 2px rgba(0, 0, 0, 0.1);
     position: relative;
     transition: background-color 0.6s linear;
@@ -46,33 +74,16 @@
       position: absolute;
       top: 100%;
       border: solid transparent;
-      border-top-color: #DA532B;
-      border-left-color: #DA532B;
+      border-top-color: #974d26;
+      border-left-color: #974d26;
       border-width: 10px;
       left: 10%;
     }
-  }
 
-  #second:checked ~ .two blockquote {
-    background-color: purple;
-  }
-
-  .two blockquote:after {
-    border: solid transparent;
-    border-top-color: purple;
-    border-left-color: purple;
-    border-width: 10px;
-  }
-
-  #third:checked ~ .three blockquote {
-    background-color: #54885F;
-  }
-
-  .three blockquote:after {
-    border: solid transparent;
-    border-top-color: #54885F;
-    border-left-color: #54885F;
-    border-width: 10px;
+    img {
+      width: 170px;
+      height: auto;
+    }
   }
 
   .quotes {
@@ -97,30 +108,25 @@
   }
 
   .slide {
+    position: absolute;
     left: -100%;
     opacity: 0;
     transition: all 0.6s ease-in;
   }
 
-  #first:checked ~ label.first {
-    border-width: 6px;
-    border-color: #DB532B;
+  #first:checked ~ label.first,
+  #second:checked ~ label.second,
+  #third:checked ~ label.third,
+  #four:checked ~ label.four,
+  #five:checked ~ label.five {
+    border: 6px solid #974d26;
   }
 
-  #second:checked ~ label.second {
-    border-width: 6px;
-    border-color: purple;
-  }
-
-  #third:checked ~ label.third {
-    border: 6px solid #54885F;
-  }
-
-  #first:checked ~ div.one, #second:checked ~ div.two, #third:checked ~ div.three {
+  #first:checked ~ div.one, #second:checked ~ div.two, #third:checked ~ div.three, #four:checked ~ div.four, #five:checked ~ div.five  {
     left: 0;
     opacity: 1;
     width: 100%;
-    padding: 0 30px;
+    padding: 0 20px;
   }
 }
 
