--- a/source/styles/sections/title.scss
+++ b/source/styles/sections/title.scss
@@ -61,4 +61,17 @@
       background: #cecece;
     }
   }
+
+  &--with-bottom-line-faq {
+    position: relative;
+
+    &:after {
+      @include centerer-x();
+      content: '';
+      bottom: -16px;
+      width: 47px;
+      height: 5px;
+      background: #fff;
+    }
+  }
 }
