change file for faq section

--- a/source/templates/sections/faq.pug
+++ b/source/templates/sections/faq.pug
@@ -3,54 +3,72 @@ section.faq__section#faq
         .title.title--with-bottom-line-faq
             h2.title__header FAQ
 
-        ul.accordion_faq
-            li.tabs
-                .social-links.icon__fa
-                    p
-                .paragraph
-                    h1 Как получить бонус?
-                    p
-                    | Покупка пакета Базовый до 20.06 - означает получение бонуса:
-                    br
-                    | Базовый 500 грн до 20.06, потом 700 грн
-                    br
-                    | Стандарт 1500 грн до 20.06, потом 1800 грн
-                    br
-                    | Премиум 3000 грн до 20.06, потом 3200 грн
-            li.tabs
-                .social-links.icon__fa
-                    p
-                .paragraph
-                    h1 Достаточно ли практики?
-                    p
-                    | Каждый день на онлайн-программе обучения медитации вы будете закреплять полученную теорию непосредственным
-                    | практическим опытом вместе с преподавателем. Наш курс выстроен таким образом, что бы вы получали
-                    | практический опыт как основу, а благодаря теории закрепляли его.
-            li.tabs
-                .social-links.icon__fa
-                    p
-                .paragraph
-                    h1 В чём мне реально поможет обучение?
-                    p
-                    | Вы получите арсенал техник медитации, которые сможете практиковать самостоятельно и справляться с
-                    | усталостью, напряжением, стрессом, а так же инструменты, которые позволят вам заботиться о своем
-                    | ментальном и эмоциональном здоровье. После нашей программы вы будете 100% уверенны, что научились медитировать.
-            li.tabs
-                .social-links.icon__fa
-                    p
-                .paragraph
-                    h1 Успевает ли преподаватель всем дать качественную обратную связь?
-                    p
-                    | Формат общения в закрытой группе FB позволяет оперативно реагировать на вопросы участников в
-                    | комментариях, обязательные отчеты после выполнения практик дают возможность отслеживать правильность
-                    | выполнения медитаций и преподаватель сразу при необходимости может отрегулировать механику.
-            li.tabs
-                .social-links.icon__fa
-                    p
-                .paragraph
-                    h1 Почему “M-time. Школа Медитации”? Есть же аналоги!
-                    p
-                    | Аналоги и есть и возможно, мы вам не подойдем, если вы ищите эзотерику, мистику, духовность. В
-                    | нашей школе о медитации говорят простым и понятным языком. Для нас медитация - это тренировка ума,
-                    | которая позволяет направлять внимание на важные области жизни и улучшать их качество. Мы “за”
-                    | практичность и эффективность.
+        .nav-wrapper
+            nav.nav
+                ul.nav-list.ul-reset
+                    li.nav-item
+                        .nav-item-inner
+                            a.nav-item-inner-heading.plus(href='#')
+                                h2.faq__header Как получить бонус?
+                            ul.nav-sub-list.ul-reset
+                                .nav-sub-list-inner
+
+                                    p Покупка пакета Базовый до 20.06 - означает получение бонуса:
+                                        br
+                                        | - Базовый 500 грн до 20.06, потом 700 грн
+                                        br
+                                        | - Стандарт 1500 грн до 20.06, потом 1800 грн
+                                        br
+                                        | - Премиум 3000 грн до 20.06, потом 3200 грн
+
+                    li.nav-item
+                        .nav-item-inner
+                            a.nav-item-inner-heading.plus(href='#')
+                                h2.faq__header Достаточно ли практики?
+                            ul.nav-sub-list.ul-reset
+                                .nav-sub-list-inner
+
+                                    p.faq__description.
+                                        Каждый день на онлайн-программе обучения медитации вы будете закреплять полученную
+                                        теорию непосредственным практическим опытом вместе с преподавателем. Наш курс
+                                        выстроен таким образом, что бы вы получали практический опыт как основу, а
+                                        благодаря теории закрепляли его.
+
+                    li.nav-item
+                        .nav-item-inner
+                            a.nav-item-inner-heading.plus(href='#')
+                                h2.faq__header В чём мне реально поможет обучение?
+                            ul.nav-sub-list.ul-reset
+                                .nav-sub-list-inner
+
+                                    p.faq__description.
+                                        Вы получите арсенал техник медитации, которые сможете практиковать самостоятельно
+                                        и справляться с усталостью, напряжением, стрессом, а так же инструменты, которые
+                                        позволят вам заботиться о своем ментальном и эмоциональном здоровье. После нашей
+                                        программы вы будете 100% уверенны, что научились медитировать.
+
+                    li.nav-item
+                        .nav-item-inner
+                            a.nav-item-inner-heading.plus(href='#')
+                                h2.faq__header Успевает ли преподаватель всем дать качественную обратную связь?
+                            ul.nav-sub-list.ul-reset
+                                .nav-sub-list-inner
+
+                                    p.faq__description.
+                                        Формат общения в закрытой группе FB позволяет оперативно реагировать на вопросы
+                                        участников в комментариях, обязательные отчеты после выполнения практик дают
+                                        возможность отслеживать правильность выполнения медитаций и преподаватель сразу
+                                        при необходимости может отрегулировать механику.
+
+                    li.nav-item
+                        .nav-item-inner
+                            a.nav-item-inner-heading.plus(href='#')
+                                h2.faq__header Почему “M-time. Школа Медитации”? Есть же аналоги!
+                            ul.nav-sub-list.ul-reset
+                                .nav-sub-list-inner
+
+                                    p.faq__description.
+                                        Аналоги и есть и возможно, мы вам не подойдем, если вы ищите эзотерику, мистику,
+                                         духовность. В нашей школе о медитации говорят простым и понятным языком. Для
+                                         нас медитация - это тренировка ума, которая позволяет направлять внимание
+                                         на важные области жизни и улучшать их качество. Мы “за” практичность и эффективность.
