--- a/source/styles/global/vars.scss
+++ b/source/styles/global/vars.scss
@@ -2,3 +2,4 @@ $ff-main: "helvetica-neue-regular";
 $ff-main-bold: "helvetica-neue-bold";
 $ff-main-light: "helvetica-neue-light";
 $ff-steps: "georgia-bold";
+$fontawesome: FontAwesome;
