--- a/source/styles/sections/faq.scss
+++ b/source/styles/sections/faq.scss
@@ -1,14 +1,14 @@
 .faq__section {
   padding: 70px 0 70px 0;
   color: #fff;
-  background-color: #1287bf;
+  background-color: #5a8a8a;
 
   @media (min-width: 320px) and (max-width: 810px) {
     padding: 50px 0 55px 0;
   }
 
   .title {
-    margin-bottom: 12px;
+    margin-bottom: 50px;
 
     @media (max-width: 700px) {
       padding: 0 20px 0 20px;
@@ -22,119 +22,117 @@
   .title__text {
     font-size: 1.25rem;
   }
-}
 
-$backgroundColor: #f77462;
-$list: #6dc5dd;
-$border: #5ab2ca;
-$geneicons: #fff;
+  .faq__header {
+    margin: 0;
+    font-size: 1rem;
+    font-family: $ff-main-bold;
 
-.accordion_faq {
-  width: 100%;
-  min-width: 950px;
-  display: block;
-  list-style-type: none;
-  overflow: hidden;
-  height: 100%;
-  font-size: 0;
-  text-align: center;
-  padding: 30px 0;
-}
-
-.tabs {
-  display: inline-block;
-  background-color: $list;
-  border-right: $border 1px solid;
-  width: 80px;
-  height: 200px;
-  overflow: hidden;
-  position: relative;
-  margin: 0;
-  font-size: 16px;
-  transition: (all 0.4s 0.1s ease-in-out);
-  text-align: left;
-
-  &:hover {
-    width: 600px;
-
-    .social-links {
-      p {
-        &:before {
-          margin-left: -100px;
-        }
-
-        &:after {
-          margin-left: -10px;
-        }
-      }
-    }
-  }
-
-  .paragraph {
-    position: relative;
-    width: 520px;
-    margin-left: 80px;
-    padding: 10px 0 0 10px;
-    height: 200px;
-    background: #fff;
-    color: #000;
-
-    h1 {
-      font-family: $ff-main-bold;
-      font-size: 1rem;
-      margin-bottom: 10px;
-    }
-
-    p {
-      font-family: $ff-main-light;
-      font-size: 0.88rem;
-      line-height: 1;
-      padding-right: 30px;
+    @media (max-width: 580px) {
+      padding-right: 50px;
     }
   }
 }
 
-.social-links {
-  display: block;
+/* ==============================
+	$-Styles
+============================== */
 
-  p {
+.nav-wrapper {
+  max-width: 550px;
+  margin: auto;
+  background: #fff;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+
+  @media (max-width: 600px) {
+    margin: 30px;
+  }
+}
+
+/* ul-reset */
+.ul-reset {
+  padding-left: 15px;
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+
+/* jQuery Accordion Navigation Menu */
+.nav-item {
+  border-top: 1px solid rgba(255, 255, 255, 0.25);
+
+  &:first-child {
+    border-top: none;
+  }
+}
+
+.nav-item-inner {
+  > a {
     display: block;
-    text-indent: -9999px;
-    font-size: 0;
-    line-height: 0;
+    text-decoration: none;
+    color: #515151;
 
-    &:before, &:after {
-      transition: ( all 0.4s 0.1s ease-in-out );
-      width: 80px;
-      height: 200px;
-      position: absolute;
-      text-indent: 0;
-      padding-top: 90px;
-      padding-left: 25px;
-      display: block;
-      font: bold 30px Genericons;
-      color: $geneicons;
-    }
-
-    &:after {
-      font-size: 48px;
-      padding-left: 20px;
-      padding-top: 80px;
-      margin-left: 85px;
+    @media (max-width: 600px) {
+      padding: 10px 0;
     }
   }
 }
 
-.icon__fa {
-  p {
-    &:after {
-      content: '-';
-      text-align: center;
-    }
+.nav-item-inner-heading {
+  position: relative;
+  padding: .75rem;
+  padding-right: 2.5rem;
+  font-weight: 700;
+  &:focus {
+    opacity: 1;
+  }
+  &.minus:after,
+  &.plus:after {
+    position: absolute;
+    top: 50%;
+    right: .75rem;
+    transform: translateY(-50%);
+    width: 1rem;
+    text-align: center;
+    font-family: $fontawesome;
+    font-style: normal;
+    font-size: .9rem;
+    color: #5a8a8a;
+  }
+  &.minus:after {
+    content: "\f068";
+  }
+  &.plus:after {
+    content: "\f067";
+  }
+}
 
-    &:before {
-      content: '+';
-      margin-left: 5px;
-    }
+.nav-sub-list {
+  display: none;
+  font-size: .8rem;
+  overflow: hidden;
+  padding: 0;
+}
+
+.nav-sub-list-inner {
+  padding: 0 .75rem .75rem;
+  color: #515151;
+
+  p {
+    margin-top: 0;
+    font-size: 0.875rem;
+    line-height: 2;
+  }
+}
+
+.nav-sub-item {
+  padding-left: .75rem;
+  margin-top: .375rem;
+  &:first-child {
+    margin-top: 0;
+    font-style: italic;
   }
 }
