--- a/source/templates/sections/footer.pug
+++ b/source/templates/sections/footer.pug
@@ -11,16 +11,7 @@ footer.footer
                         i(class="fa fa-" + item aria-hidden="true")
                             span.visually-hidden=linkItems
 
-            p.footer__text Мостище, Макаровский район,
-                br
-                .
-                    Киевская область
-                br
-                .
-                    clinic.vitaplus@gmail.com
-                br
-                .
-                    +38 (093) 602-25-86
+            //p.footer__text
 
     .footer__bottom
-        .footer__copy Copyright © Your Website 2018 All Rights Reserved
+        .footer__copy Все права защищены © M-Time 2018
