--- a/source/styles/sections/faq.scss
+++ b/source/styles/sections/faq.scss
@@ -1,5 +1,5 @@
 .faq__section {
-  padding: 70px 0 70px 0;
+  padding: 100px 0 110px 0;
   color: #fff;
   background-color: #5a8a8a;
 
@@ -19,14 +19,31 @@
     font-size: 2.25rem;
   }
 
-  .title__text {
-    font-size: 1.25rem;
+  .btn-down {
+    position: relative;
+    margin: auto auto 20px;
+    width: 65px;
+    height: 65px;
+    border: 2px solid #fff;
+    border-radius: 50%;
   }
 
-  .faq__header {
-    margin: 0;
-    font-size: 1rem;
+  .arrow-down {
+    @include centerer-xy();
+
+    padding: 20px;
+    color: #fff;
+
+    .fa {
+      font-size: 2.5rem;
+    }
+  }
+
+  .form__header {
+    margin: 0 0 25px;
+    font-size: 1.5rem;
     font-family: $ff-main-bold;
+    text-align: center;
 
     @media (max-width: 580px) {
       padding-right: 50px;
@@ -34,13 +51,90 @@
   }
 }
 
-/* ==============================
-	$-Styles
-============================== */
+.form {
+  position: relative;
+  width: 67%;
+  margin: auto;
+  padding: 40px 50px 66px 50px;
+  border-radius: 3px;
+  color: #828282;
+  text-align: center;
+  background-color: #fff;
+
+  @media (min-width: 320px) and (max-width: 810px) {
+    width: 80%;
+    padding: 25px;
+  }
+
+  &-container {
+    padding-top: 30px;
+  }
+
+  &:before {
+    @include centerer-x();
+
+    content: '';
+    border: 30px solid transparent;
+    border-bottom: 30px solid #fff;
+    top: -59px;
+  }
+
+  &__close-button {
+    position: absolute;
+    top: -28px;
+    right: -16px;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    border: 2px solid #fff;
+    text-align: center;
+    font-size: 2rem;
+    color: #fff;
+    background: #de2b24;
+    transition: 0.3s;
+
+    &:hover {
+      background: lighten(#de2b24, 10%);
+    }
+  }
+
+  &__text {
+    margin-bottom: 33px;
+    font-size: 0.9375rem;
+    line-height: 1.5;
+  }
+
+  &__fields {
+    margin-bottom: 32px;
+  }
+
+  &__input {
+    width: 76%;
+    display: block;
+    margin: auto auto 8px auto;
+    padding: 18px 20px;
+    border: 1px solid #d8d8d8;
+    border-radius: 3px;
+    font-size: 0.875rem;
+
+    @media (min-width: 320px) and (max-width: 810px) {
+      width: 100%;
+    }
+
+    &:focus {
+      box-shadow: 0 0 8px 1px rgba(0, 0, 0, 0.5);
+    }
+  }
+
+  .button {
+    padding: 15px 30px;
+    border: none;
+  }
+}
 
 .nav-wrapper {
   max-width: 550px;
-  margin: auto;
+  margin: auto auto 50px;
   background: #fff;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -107,6 +201,16 @@
   }
   &.plus:after {
     content: "\f067";
+  }
+
+  .faq__header {
+    margin: 0;
+    font-size: 1rem;
+    font-family: $ff-main-bold;
+
+    @media (max-width: 580px) {
+      padding-right: 50px;
+    }
   }
 }
 
